fixed comment wrap

--- a/src/styles/stylesBlog.css
+++ b/src/styles/stylesBlog.css
@@ -287,3 +287,7 @@ figcaption {
     color: var(--text-secondary);
     text-align: center;
 }
+
+pre {
+  white-space: pre-wrap;
+}
